--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,6 +38,10 @@ steps:
     command: 'restore'
     projects: '**/*.csproj'
 
+- template: templates/build.yml
+  parameters:
+    buildConfiguration: 'Debug'
+
 - task: DotNetCoreCLI@2
   displayName: 'Build the project - $(buildConfiguration)'
   inputs:
